--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Best way</h1>
     <h2>to prove yourself</h2>
-    <h2>love myself</h2>    
+    <h2>Hardworking</h2>    
 </body>
 </html>
