--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Best way</h1>
     <h2>to prove yourself</h2>
     <h2>Hardworking</h2>    
+    <img src="blog.jpg" alt="pic">
 </body>
 </html>
