--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
     <h2>to prove yourself</h2>
     <h2>Hardworking</h2>    
     <img src="blog.jpg" alt="pic">
+    <div>
+
+        <h3>new blog</h3>
+        <h5>hey girl</h5>
+        <p>cute girl cute girl cute girl Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium voluptates sed pariatur, saepe distinctio repellat quasi molestias! Harum incidunt maiores odit, dignissimos animi autem quas sit cumque, provident sapiente dolorem?</p>
+    </div>
 </body>
 </html>
